@@ -22,6 +22,13 @@
     to revert.
 19. Draw statusbar frames, if enabled.
 20. Nicer 'V' arrows.
+21. When reading KDe settings, read (if they exist):
+        /etc/kderc
+        /etc/kde4rc or /etc/kde3rc
+        /etc/kde4/kdeglobals or /etc/kde3/kdeglobals
+        <KDE4 prefix>/usr/share/config/kdeglobals or <KDE3 prefix>/usr/share/config/kdeglobals
+        <KDE4 prefix>/usr/share/config/system.kdeglobals or <KDE3 prefix>/usr/share/config/system.kdeglobals
+        $KDEHOME/share/config/kdeglobals
 
 0.59.7
 ------
